--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                         </main>
                     </div>
                     <div class="swiper-slide">
-                      <a href="public/pubgm.html">
+                      <a href="public/pubg.html">
                         <main class="content-box">
                             <div class="box">
                                 <div class="slide-img">
